      any work done in the menus is completely wasted CPU (ADAMK)
    - Removed the very expensive window list refresh code from the main menu
      refresh method into it's own dedicated refresh method. We can fire
      this directly in the limited number of situations that the notebook
      adds, removed, or renamed documents (ADAMK)
    - Speed up status bar updates (ADAMK, SEWI)

0.57 2010.02.18 - **WARNING Contains new threading code**
    - Spawn a master thread very early in the startup process. Use that
      master to create worker threads as necessary. Cuts down on memory
      usage and fixes the "Leaked Scalars" warning (BRAMBLE, SMUELLER)
    - Fix pluginmanager error dialog for plugin-event failure (BRAMBLE)
    - Add status messages for Padre::File operations (SEWI)
    - Select some files to close (SEWI)
    - Select some files to reload (SEWI)
    - GotoLine is now called Goto dialog (AZAWAWI)
    - Goto dialog is now non-modal lazy single instance dialog (AZAWAWI)
    - Goto dialog has a current positon/line number field (AZAWAWI)
    - Regex editor dialog is now more compact and it includes regex helper
      buttons (AZAWAWI)
    - Regex editor dialog can now highlight matched text (AZAWAWI)
    - Regex editor dialog can now display regex description (AZAWAWI)
    - Implemented Replace (aka substitution) in Regex editor (AZAWAWI)
    - Right click "Edit with Regex Editor" now works on user-selected
      text (AZAWAWI)
    - Added "headline" method to Padre::Project, which allows a project
      to try and intuit the "primary" file in the project (for a CPAN
      distribution of Foo::Bar this will be lib/Foo/Bar.pm) (ADAMK)
    - Removed the final usage of the "Provider" phrasing, and made more
      of the modules used by the Perl help provider run-time loaded (ADAMK)
    - Moved padre.exe build from bin to win32-loader folder since bin is a
      bad path for putting the Padre win32 launcher code (SMUELLER, AZAWAWI)