@@ -29,6 +29,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       this directly in the limited number of situations that the notebook
       adds, removed, or renamed documents (ADAMK)
     - Speed up status bar updates (ADAMK, SEWI)
+    - Warning editor markers are now actually orange on win32 (AZAWAWI)
 
 0.57 2010.02.18 - **WARNING Contains new threading code**
     - Spawn a master thread very early in the startup process. Use that
